--- a/frontend/src/components/sections/main/mian/main.css
+++ b/frontend/src/components/sections/main/mian/main.css
@@ -71,25 +71,9 @@
 .main__image {
     position: absolute;
     right: 0;
-    width: 35%;
-    overflow: hidden;
-    border-radius: 113px 0px 0px 113px;
-    border: 2px solid #3B3B3B;
-    background-image: url("../../../../../public/images/main-imageBlur.png");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    width: 40%;
 }
 
-.image__blur {
-    padding: 20px 10px;
-    width: 100%;
-    height: 100%;
-    background: rgba(36, 36, 36, 0.53);
-    backdrop-filter: blur(88.80000305175781px);
-
-}
 
 
 @media (max-width: 1200px) {
